vga_posth should be inside NPCI > 0; from Jarle Greipsland in PR 43449.